--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <title>Document</title>
   </head>
   <body class="container-fluid">
+    <nav class="nav justify-content-end">
+      <ul>
+        <li><a href="#">Welcome</a></li>
+        <li><a href="#">Contacts</a></li>
+      </ul>
+    </nav>
     <div class="container main-div p-5"></div>
     <script
       src="https://code.jquery.com/jquery-3.6.0.js"
