added stylling to nav bar

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <title>Document</title>
   </head>
   <body class="container-fluid">
-    <nav class="nav justify-content-end">
-      <ul>
+    <nav class="nav justify-content-end ">
+      <ul class="d-flex p-3">
         <li><a href="#">Welcome</a></li>
         <li><a href="#">Contacts</a></li>
       </ul>
