--- a/index.html
+++ b/index.html
@@ -15,13 +15,20 @@
     <title>Document</title>
   </head>
   <body class="container-fluid">
+    <!-- nav bar start -->
     <nav class="nav justify-content-end ">
-      <ul class="d-flex p-3">
+      <ul class="d-flex ">
         <li><a href="#">Welcome</a></li>
         <li><a href="#">Contacts</a></li>
       </ul>
     </nav>
-    <div class="container main-div p-5"></div>
+    <!-- first section start -->
+    <div class="container main-div p-5">
+      <div class="text-center p-2">
+        <h1>DeanKa Pizza</h1>
+        <h3>Who eats pizza never dies, Become Immortal, place an order!</h3>
+      </div>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.6.0.js"
       integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
