added select options

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </head>
   <body class="container-fluid">
     <!-- nav bar start -->
-    <nav class="nav justify-content-end ">
-      <ul class="d-flex ">
+    <nav class="nav justify-content-end">
+      <ul class="d-flex">
         <li><a href="#">Welcome</a></li>
         <li><a href="#">Contacts</a></li>
       </ul>
@@ -27,6 +27,49 @@
       <div class="text-center p-2">
         <h1>DeanKa Pizza</h1>
         <h3>Who eats pizza never dies, Become Immortal, place an order!</h3>
+      </div>
+      <div class="container d-flex text-center">
+        <div class="col-md-4">
+          <img src="images/pizza.gif " id="img1" alt="pizza" />
+          <h3>Pizza</h3>
+          <p class="fs-6">
+            Our pizza gives you the best of <br />
+            blend of kenyan and italian <br />
+            flavors. Indulge yourself, no guilty <br />
+            pleasures only the good stuff
+          </p>
+          <select class="form-control" name="" id="">
+            <option value="500" label="small">Small</option>
+            <option value="700" label="medium">Medium</option>
+            <option value="1000" label="large">Large</option>
+          </select>
+        </div>
+        <div class="col-md-4">
+          <img src="images/toppings.jpg" alt="pizza toppings" />
+          <h3>Pizza</h3>
+          <p class="fs-6 p">
+            We know that pizza is awesome but our <br />
+            high quality toppings will definately <br />take your pizza to the
+            next level.
+          </p>
+          <select class="form-control" name="" id="">
+            <option value="100" label="Olives">Olives</option>
+            <option value="50" label="Cheese">Cheese</option>
+            <option value="80" label="Pepperoni">Pepperoni</option>
+          </select>
+        </div>
+        <div class="col-md-4">
+          <img src="images/stuffed.jpg" alt="pizza toppings" />
+          <h3>Pizza</h3>
+          <p class="fs-6 p">
+           Your crust your choice we are here to <br>faciitate your pizza experience to the next <br>level. Try a different kind of crust today.
+          </p>
+          <select class="form-control" name="" id="">
+            <option value="500" label="Stuffed">Stuffed</option>
+            <option value="200" label="Gluten-Free">Gluten-Free</option>
+            <option value="300" label="Crispy">Crispy</option>
+          </select>
+        </div>
       </div>
     </div>
     <script
