--- a/index.html
+++ b/index.html
@@ -23,55 +23,88 @@
       </ul>
     </nav>
     <!-- first section start -->
-    <div class="container main-div p-5">
+    <div class="container-fluid main-div p-5">
       <div class="text-center p-2">
         <h1>DeanKa Pizza</h1>
         <h3>Who eats pizza never dies, Become Immortal, place an order!</h3>
       </div>
-      <div class="container d-flex text-center">
-        <div class="col-md-4">
+      <div class="container raw-raw-3 d-flex text-center">
+        <div class="col-md-4 first">
           <img src="images/pizza.gif " id="img1" alt="pizza" />
-          <h3>Pizza</h3>
-          <p class="fs-6">
+          <h3 class="p-3">Pizza</h3>
+          <p class="fs-6 p" id="p1">
             Our pizza gives you the best of <br />
             blend of kenyan and italian <br />
             flavors. Indulge yourself, no guilty <br />
             pleasures only the good stuff
           </p>
-          <select class="form-control" name="" id="">
-            <option value="500" label="small">Small</option>
-            <option value="700" label="medium">Medium</option>
-            <option value="1000" label="large">Large</option>
-          </select>
         </div>
-        <div class="col-md-4">
-          <img src="images/toppings.jpg" alt="pizza toppings" />
-          <h3>Pizza</h3>
-          <p class="fs-6 p">
+        <div class="col-md-4 second">
+          <img src="images/toppings.jpg" id="img2" alt="pizza toppings" />
+          <h3 class="p-3">Toppings</h3>
+
+          <p class="fs-6 p" id="p2">
             We know that pizza is awesome but our <br />
             high quality toppings will definately <br />take your pizza to the
             next level.
           </p>
-          <select class="form-control" name="" id="">
-            <option value="100" label="Olives">Olives</option>
-            <option value="50" label="Cheese">Cheese</option>
-            <option value="80" label="Pepperoni">Pepperoni</option>
-          </select>
         </div>
-        <div class="col-md-4">
-          <img src="images/stuffed.jpg" alt="pizza toppings" />
-          <h3>Pizza</h3>
-          <p class="fs-6 p">
-           Your crust your choice we are here to <br>faciitate your pizza experience to the next <br>level. Try a different kind of crust today.
+        <div class="col-md-4 third">
+          <img src="images/stuffed.jpg" id="img3" alt="pizza toppings" />
+          <h3 class="p-3">Crust</h3>
+          <p class="fs-6 p" id="p3">
+            Your crust your choice we are here to <br />faciitate your pizza
+            experience to the next <br />level. Try a different kind of crust
+            today.
           </p>
-          <select class="form-control" name="" id="">
-            <option value="500" label="Stuffed">Stuffed</option>
-            <option value="200" label="Gluten-Free">Gluten-Free</option>
-            <option value="300" label="Crispy">Crispy</option>
-          </select>
         </div>
       </div>
+      <div class="raw container d-flex">
+        <select class="form-control cl-md-4" name="" id="size">
+          <option value="500" label="Small">Small</option>
+          <option value="700" label="Medium">Medium</option>
+          <option value="1000" label="Large">Large</option>
+        </select>
+        <select class="form-control cl-md-4" name="" id="toppings">
+          <option value="100" label="Olives">Olives</option>
+          <option value="50" label="Cheese">Cheese</option>
+          <option value="80" label="Pepperoni">Pepperoni</option>
+        </select>
+        <select class="form-control cl-md-4" name="" id="crust">
+          <option value="500" label="Stuffed">Stuffed</option>
+          <option value="200" label="Gluten-Free">Gluten-Free</option>
+          <option value="300" label="Crispy">Crispy</option>
+        </select>
+      </div>
+      <!-- button submit -->
+      <div class="text-center p-4">
+        <button class="btn-info btn1 order" type="submit">Order</button>
+      </div>
+      <!-- table start -->
+      <div class="container">
+        <table class="table ">
+          <thead>
+            <tr>
+              <th scope="col">Order No.</th>
+              <th scope="col">Pizza Size</th>
+              <th scope="col">Toppings</th>
+              <th scope="col">Crust</th>
+              <th scope="col">Total</th>
+            </tr>
+          </thead>
+          <tbody id="pizza">
+            <tr>
+              <th scope="row">1</th>
+              <td id="size1"></td>
+              <td id="toppings1"></td>
+              <td id="crust1"></td>
+              <td id="total"></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
+
     <script
       src="https://code.jquery.com/jquery-3.6.0.js"
       integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
