added extra buttons and orders feedback info

--- a/index.html
+++ b/index.html
@@ -103,6 +103,21 @@
           </tbody>
         </table>
       </div>
+      <!-- buttons and feedback info -->
+      <div>
+        <div class="text-center"><button class="btn-info btn2" type="submit" >Add Another</button>
+        </div>
+        <!--  -->
+        <div class="feedback-info">
+          <h3>The total is: <span></span></h3>
+          <h4>Would you like delivery for an additional <em>200</em>?</h4>
+          <h4>Your order has been received! We are dispatching our rider to <span></span></h4>
+          <div class="text-center pick-up">
+            <input type="text" size="30" placeholder="Where do you live?" required />
+            <button class="btn-info btn3 complete" type="submit">Complete</button>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script
