added pizza order function

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <th scope="col">Total</th>
             </tr>
           </thead>
-          <tbody id="pizza">
+          <tbody id="table1">
             <tr>
               <th scope="row">1</th>
               <td id="size1"></td>
@@ -109,9 +109,9 @@
         </div>
         <!--  -->
         <div class="feedback-info">
-          <h3>The total is: <span></span></h3>
-          <h4>Would you like delivery for an additional <em>200</em>?</h4>
-          <h4>Your order has been received! We are dispatching our rider to <span></span></h4>
+          <h3 class="fs-5">The total is: <span></span></h3>
+          <h4 class="fs-5">Would you like delivery for an additional <em>200</em>?</h4>
+          <h4 class="fs-5">Your order has been received! We are dispatching our rider to <span></span></h4>
           <div class="text-center pick-up">
             <input type="text" size="30" placeholder="Where do you live?" required />
             <button class="btn-info btn3 complete" type="submit">Complete</button>
