--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
       </div>
       <!-- buttons and feedback info -->
       <div>
-        <div class="text-center"><button class="btn-info btn2" type="submit" >Add Another</button>
+        <div class="text-center"><button class="btn-info btn btn2" type="submit" >Add Another</button>
         </div>
         <!--  -->
-        <div class="feedback-info">
+        <div class="feedback-info text-center">
           <h3 class="fs-5">The total is: <span></span></h3>
           <h4 class="fs-5">Would you like delivery for an additional <em>200</em>?</h4>
           <h4 class="fs-5">Your order has been received! We are dispatching our rider to <span></span></h4>
