--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
       <!-- table start -->
       <div class="container">
-        <table class="table ">
+        <table class="table">
           <thead>
             <tr>
               <th scope="col">Order No.</th>
@@ -105,17 +105,36 @@
       </div>
       <!-- buttons and feedback info -->
       <div>
-        <div class="text-center"><button class="btn-info btn btn2" type="submit" >Add Another</button>
+        <div class="text-center">
+          <button class="btn-info btn btn2" type="submit">Add Another</button>
         </div>
         <!--  -->
         <div class="feedback-info text-center">
           <h3 class="fs-5">The total is: <span></span></h3>
-          <h4 class="fs-5">Would you like delivery for an additional <em>200</em>?</h4>
-          <h4 class="fs-5">Your order has been received! We are dispatching our rider to <span></span></h4>
+          <h4 class="fs-5">
+            Would you like delivery for an additional <em>200</em>?
+          </h4>
+          <h4 class="fs-5">
+            Your order has been received! We are dispatching our rider to
+            <span></span>
+          </h4>
           <div class="text-center pick-up">
-            <input type="text" size="30" placeholder="Where do you live?" required />
-            <button class="btn-info btn3 complete" type="submit">Complete</button>
+            <input
+              type="text"
+              size="30"
+              placeholder="Where do you live?"
+              required
+            />
+            <button class="btn-info btn3" type="submit">Complete</button>
           </div>
+          <div class="">
+            <button class="btn-info btn-yes" type="submit">Yes</button>
+            <button class="btn-info btn-no" type="submit">No</button>
+          </div>
+          <div class="">
+            <button class="btn5 btn-info" type="submit">Checkout</button>
+          </div>
+
         </div>
       </div>
     </div>
