--- a/index.html
+++ b/index.html
@@ -109,15 +109,15 @@
           <button class="btn-info btn btn2" type="submit">Add Another</button>
         </div>
         <!--  -->
-        <div class="feedback-info text-center">
+        <div class="feedback text-center">
           <h3 class="fs-5">The total is: <span></span></h3>
           <h4 class="fs-5">
             Would you like delivery for an additional <em>200</em>?
           </h4>
-          <h4 class="fs-5">
+          <h5 class="fs-5">
             Your order has been received! We are dispatching our rider to
             <span></span>
-          </h4>
+          </h5>
           <div class="text-center pick-up">
             <input
               type="text"
