added no button

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </table>
       </div>
       <!-- buttons and feedback info -->
-      <div>
+      <div class="buttons">
         <div class="text-center">
           <button class="btn-info btn btn2" type="submit">Add Another</button>
         </div>
@@ -132,7 +132,7 @@
             <button class="btn-info btn-no" type="submit">No</button>
           </div>
           <div class="">
-            <button class="btn5 btn-info" type="submit">Checkout</button>
+            <button class="btn-info btn5" type="submit">Checkout</button>
           </div>
 
         </div>
