added styling to feedback section

--- a/index.html
+++ b/index.html
@@ -109,29 +109,32 @@
           <button class="btn-info btn btn2" type="submit">Add Another</button>
         </div>
         <!--  -->
-        <div class="feedback text-center">
-          <h3 class="fs-5">The total is: <span></span></h3>
-          <h4 class="fs-5">
-            Would you like delivery for an additional <em>200</em>?
-          </h4>
-          <h5 class="fs-5">
-            Your order has been received! We are dispatching our rider to
-            <span></span>
-          </h5>
-          <div class="text-center pick-up">
-            <input
-              type="text"
-              size="30"
-              placeholder="Where do you live?"
-              required
-            />
-            <button class="btn-info btn3" type="submit">Complete</button>
+        <div class="text-center">
+          <div class="feedback text center">
+            <h3 class="fs-5">The total is: <span></span></h3>
+            <h4 class="fs-5">
+              Would you like delivery for an additional <em>200</em>?
+            </h4>
+            <h5 class="fs-5">
+              Your order has been received! We are dispatching our rider to
+              <span></span>
+            </h5>
+            <div class="text-center pick-up">
+              <input
+                type="text"
+                size="30"
+                placeholder="Where do you live?"
+                required
+              />
+              <button class="btn-info btn3" type="submit">Complete</button>
+            </div>
           </div>
+
           <div class="">
             <button class="btn-info btn-yes" type="submit">Yes</button>
             <button class="btn-info btn-no" type="submit">No</button>
           </div>
-          <div class="">
+          <div class="text-center">
             <button class="btn-info btn5" type="submit">Checkout</button>
           </div>
 
