added feedback after making an order

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               Would you like delivery for an additional <em>200</em>?
             </h4>
             <h5 class="fs-5">
-              Your order has been received! We are dispatching our rider to
+              Your order has been received! We are dispatching our rider 
               <span></span>
             </h5>
             <div class="text-center pick-up">
