--- a/index.html
+++ b/index.html
@@ -115,17 +115,14 @@
             <h4 class="fs-5">
               Would you like delivery for an additional <em>200</em>?
             </h4>
+            <h2 class="fs-5">Your order has been received!</h2>
             <h5 class="fs-5">
-              Your order has been received! We are dispatching our rider 
+              Your order has been received! We are dispatching our rider
               <span></span>
             </h5>
             <div class="text-center pick-up">
-              <input
-                type="text"
-                size="30"
-                placeholder="Where do you live?"
-                required
-              />
+              <input type="text"
+               placeholder="Where do you live?" required />
               <button class="btn-info btn3" type="submit">Complete</button>
             </div>
           </div>
@@ -137,10 +134,16 @@
           <div class="text-center">
             <button class="btn-info btn5" type="submit">Checkout</button>
           </div>
-
         </div>
       </div>
     </div>
+    <footer class="container-fluid">
+      <div class="raw container">
+        
+
+      </div>
+
+    </footer>
 
     <script
       src="https://code.jquery.com/jquery-3.6.0.js"
