added a row at footer for designer

--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
               <span></span>
             </h5>
             <div class="text-center pick-up">
-              <input type="text"
-               placeholder="Where do you live?" required />
+              <input type="text" placeholder="Where do you live?" required />
               <button class="btn-info btn3" type="submit">Complete</button>
             </div>
           </div>
@@ -137,12 +136,11 @@
         </div>
       </div>
     </div>
-    <footer class="container-fluid">
-      <div class="raw container">
-        
-
+    <footer class="container-fluid p-3 fs-5 text-white">
+      <div class="raw container d-flex">
+        <div class="col-md-4"><p>Designed by Martin Kago</p></div>
+        <div class="col-md-4"><p>Open 24/7 Welcome</p></div>
       </div>
-
     </footer>
 
     <script
