--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
         </div>
       </div>
     </div>
-    <footer class="container-fluid p-3 fs-5 text-white">
-      <div class="raw container d-flex">
+    <footer class="container-fluid p-3 fs-5 text-white text-center">
+      <div class="row container ">
         <div class="col-md-4"><p>Designed by Martin Kago</p></div>
         <div class="col-md-4"><p>Open 24/7 Welcome</p></div>
       </div>
