added contact in footer

--- a/index.html
+++ b/index.html
@@ -135,13 +135,18 @@
           </div>
         </div>
       </div>
+      <footer class="container-fluid p-3 fs-5 ">
+        <div class="row container text-center">
+          <div class="col-md-4"><p>Designed by Martin Kago</p></div>
+          <div class="col-md-4"><p>Open 24/7 Welcome</p></div>
+          <div class="col-md-4"><p>Contacts: 0700xxxxxx</p></div>
+  
+        </div>
+      </footer>
+
     </div>
-    <footer class="container-fluid p-3 fs-5 text-white text-center">
-      <div class="row container ">
-        <div class="col-md-4"><p>Designed by Martin Kago</p></div>
-        <div class="col-md-4"><p>Open 24/7 Welcome</p></div>
-      </div>
-    </footer>
+   
+  
 
     <script
       src="https://code.jquery.com/jquery-3.6.0.js"
