added media query to increase the responsiveness of a page

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <!-- first section start -->
     <div class="container-fluid main-div p-5">
       <div class="text-center p-2">
-        <h1>DeanKa Pizza</h1>
-        <h3>Who eats pizza never dies, Become Immortal, place an order!</h3>
+        <h1 class="heading">DeanKa Pizza</h1>
+        <h3 class="heading2">Who eats pizza never dies, Become Immortal, place an order!</h3>
       </div>
-      <div class="container raw-raw-3 d-flex text-center">
+      <div class="container row d-flex text-center">
         <div class="col-md-4 first">
           <img src="images/pizza.gif " id="img1" alt="pizza" />
-          <h3 class="p-3">Pizza</h3>
+          <h3 class="p-3 heading2">Pizza</h3>
           <p class="fs-6 p" id="p1">
             Our pizza gives you the best of <br />
             blend of kenyan and italian <br />
@@ -41,7 +41,7 @@
         </div>
         <div class="col-md-4 second">
           <img src="images/toppings.jpg" id="img2" alt="pizza toppings" />
-          <h3 class="p-3">Toppings</h3>
+          <h3 class="p-3 heading2">Toppings</h3>
 
           <p class="fs-6 p" id="p2">
             We know that pizza is awesome but our <br />
@@ -51,7 +51,7 @@
         </div>
         <div class="col-md-4 third">
           <img src="images/stuffed.jpg" id="img3" alt="pizza toppings" />
-          <h3 class="p-3">Crust</h3>
+          <h3 class="p-3 heading2">Crust</h3>
           <p class="fs-6 p" id="p3">
             Your crust your choice we are here to <br />faciitate your pizza
             experience to the next <br />level. Try a different kind of crust
