added media query to increase the responsiveness of a nav bar

--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
           </div>
         </div>
       </div>
-      <footer class="container-fluid p-3 fs-5 ">
+      <footer class="container-fluid p-3 fs-5">
         <div class="row container text-center">
-          <div class="col-md-4"><p>Designed by Martin Kago</p></div>
-          <div class="col-md-4"><p>Open 24/7 Welcome</p></div>
-          <div class="col-md-4"><p>Contacts: 0700xxxxxx</p></div>
+          <div class="col-md-4"><p class="heading2">Designed by Martin Kago</p></div>
+          <div class="col-md-4"><p class="heading2">Open 24/7 Welcome</p></div>
+          <div class="col-md-4"><p class="heading2">Contacts: 0700xxxxxx</p></div>
   
         </div>
       </footer>
