added multiple selection for toppinggs

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <option value="700" label="Medium">Medium</option>
           <option value="1000" label="Large">Large</option>
         </select>
-        <select class="form-control cl-md-4" name="" id="toppings">
+        <select class="form-control cl-md-4" name="" id="toppings" multiple>
           <option value="100" label="Olives">Olives</option>
           <option value="50" label="Cheese">Cheese</option>
           <option value="80" label="Pepperoni">Pepperoni</option>
