--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
       <!-- buttons and feedback info -->
       <div class="buttons">
-        <div class="text-center">
+        <div class="text-center p-2">
           <button class="btn-info btn btn2" type="submit">Add Another</button>
         </div>
         <!--  -->
